traefik3/4_ingressroutetcp_mysql/mysql.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: registry.cn-hangzhou.aliyuncs.com/wtns/mysql:8.2.0
        imagePullPolicy: IfNotPresent
        ports:
        - name: mysql
          protocol: TCP
          containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql
  name: mysql-svc
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql
