traefik3/4_ingressroutetcp_mysql/ingressroutetcp_mysql.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mysql-ingressroutetcp
spec:
  entryPoints:
  - mysql
  routes:
  - match: HostSNI(`*`)
    services:
      - name: mysql-svc
        port: 3306
